src/test/deca/syntax/parser/invalid/init_two_var.deca
// Initialized two variables

{
    int x, y = 3, 1;
}